[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/TestConnect.gd" type="Script" id=1]
[ext_resource path="res://scenes/Terminal.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/GDSimpleBLE/scripts/BLEAdapter.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TestConnect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Terminal" parent="." instance=ExtResource( 2 )]
bbcode_text = ""
text = ""

[node name="TerminalBackground" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="UI" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -141.0

[node name="Buttons" type="HBoxContainer" parent="UI"]
margin_right = 1270.0
margin_bottom = 24.0

[node name="PeripheralIndex" type="SpinBox" parent="UI/Buttons"]
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
max_value = 0.0
editable = false

[node name="Connect" type="Button" parent="UI/Buttons"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
disabled = true
text = "Connect"

[node name="BLEAdapter" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="UI/Buttons/Connect" to="." method="_on_Connect_pressed"]
[connection signal="peripheral_connected" from="BLEAdapter" to="." method="_on_BLEAdapter_peripheral_connected"]
[connection signal="peripheral_disconnected" from="BLEAdapter" to="." method="_on_BLEAdapter_peripheral_disconnected"]
